# Scaling-Laws-for-Small-Language-Models

./: .env.example  .gitignore  README.MD  pyproject.toml
configs/experiment/: scaling_sweep.yaml
configs/model/: base.yaml  distillation.yaml  efficient_attention.yaml
configs/training/: ablation.yaml  default.yaml
notebooks/: scaling_study.ipynb  scaling_study_fixed.ipynb
results/: report.md  results.csv  scaling_fit.json
scripts/: analyze_results.py  evaluate.py  run_lm_harness.sh  run_scaling_sweep.py  train.py
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessing.py  tokenizer.py
src/evaluation/: __init__.py  benchmarks.py  downstream.py  perplexity.py
src/models/: __init__.py  base.py
src/models/architectures/: __init__.py  efficient_transformer.py  hybrid_ssm.py
src/models/attention/: __init__.py  grouped_query.py  linear_attention.py  sparse.py
src/models/components/: __init__.py  embeddings.py  ffn.py
src/scaling/: __init__.py  compute_optimal.py  extrapolation.py  laws.py
src/training/: __init__.py  distillation.py  optimizer.py  scheduler.py  trainer.py
tests/: __init__.py  test_data.py  test_models.py  test_scaling.py
